# ScriptBench

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  socket.yml
scriptbench/: __init__.py  context.py  metadata.txt  plugin.py  reporter.py  runner.py  scriptbench_template.py  suite_manager.py
scriptbench/ui/: dialog.py  main_dialog.ui
